# plotters

./: README.md
doc-template/examples/: chart.rs  composable_elements.rs
plotters/: Cargo.toml
plotters-backend/: Cargo.toml
plotters-backend/src/: font.rs  lib.rs  style.rs  text.rs
plotters-backend/src/font/: font_desc.rs  naive.rs  ttf.rs  web.rs
plotters-backend/src/rasterizer/: circle.rs  line.rs  polygon.rs  rect.rs
plotters-bitmap/benches/benches/: parallel.rs  rasterizer.rs
plotters-bitmap/src/: bitmap.rs
plotters-bitmap/src/bitmap/: test.rs
plotters-svg/src/: svg.rs
plotters/examples/: 3d-plot.rs  3d-plot2.rs  animation.rs  area-chart.rs  blit-bitmap.rs  boxplot.rs  chart.rs  console.rs  customized_coord.rs  errorbar.rs  full_palette.rs  histogram.rs  mandelbrot.rs  matshow.rs  nested_coord.rs  normal-dist.rs  normal-dist2.rs  pie.rs  relative_size.rs  sierpinski.rs  slc-temp.rs  snowflake.rs  stock.rs  tick_control.rs  two-scales.rs
plotters/src/: evcxr.rs  lib.rs  test.rs
plotters/src/chart/: axes3d.rs  builder.rs  context.rs  dual_coord.rs  mesh.rs  series.rs  state.rs
plotters/src/coord/: translate.rs
plotters/src/coord/ranged1d/: mod.rs
plotters/src/drawing/: area.rs  mod.rs
plotters/src/element/: basic_shapes.rs  basic_shapes_3d.rs  boxplot.rs  candlestick.rs  composable.rs  dynelem.rs  errorbar.rs  image.rs  mod.rs  pie.rs  points.rs  text.rs
plotters/src/series/: area_series.rs  histogram.rs  line_series.rs  surface.rs
plotters/src/style/: color.rs  mod.rs  shape.rs  size.rs  text.rs
plotters/src/style/font/: mod.rs  (+4 more)
(+9 files in other folders)
