[package]
name = "plotters-backend"
version = "0.4.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Plotters Backend API"
homepage = "https://plotters-rs.github.io"
repository = "https://github.com/plotters-rs/plotters"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies.wasm-bindgen]
version = "0.2.62"

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies.web-sys]
version = "0.3.51"
features = [
    "Document",
    "DomRect",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]

[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "wasi"))))'.dependencies]
ttf-parser = { version = "0.15.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
pathfinder_geometry = { version = "0.5.1", optional = true }
font-kit = { version = "0.11.0", optional = true }

[features]
default = []

# Font implementation
ttf = ["font-kit", "ttf-parser", "lazy_static", "pathfinder_geometry"]
# dlopen fontconfig C library at runtime instead of linking at build time
# Can be useful for cross compiling, especially considering fontconfig has lots of C dependencies
fontconfig-dlopen = ["font-kit/source-fontconfig-dlopen"]
